--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <div class="photo-container">
                     <!-- Couple photo placeholder -->
-                    <img src="https://advanced-coral-psjqepvy7c.edgeone.app/1767523542949~3.jpg" alt="Our Photo">
+                    <img src="https://drive.google.com/file/d/1PDimPxWI6rW6uuE8hKyNBJ7i_L1Qe_J4/view?usp=drivesdk" alt="Our Photo">
                 </div>
             </div>
             
