--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <div class="photo-container">
                     <!-- Couple photo placeholder -->
-                    <img src="https://drive.google.com/file/d/1PDimPxWI6rW6uuE8hKyNBJ7i_L1Qe_J4/view?usp=drivesdk" alt="Our Photo">
+                    <img src="https://www.dropbox.com/scl/fi/l88a7gc88g4vcxbckvx8u/unnamed.jpg?rlkey=ge90zckvhmrn5rvcthsvik4f3&st=sp46ds9x&dl=0" alt="Our Photo">
                 </div>
             </div>
             
