--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <div class="photo-container">
                     <!-- Couple photo placeholder -->
-                    <img src="https://www.dropbox.com/scl/fi/l88a7gc88g4vcxbckvx8u/unnamed.jpg?rlkey=ge90zckvhmrn5rvcthsvik4f3&st=sp46ds9x&dl=0" alt="Our Photo">
+                    <img src="https://cdn.phototourl.com/uploads/2026-02-08-f31a1985-1def-49e4-a5ab-d1f2b80f966d.jpg" alt="Our Photo">
                 </div>
             </div>
             
